# library-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: integration.yml  release.yml
src/: main.rs
tests/: integration.rs
