[package]
name = "library-rs"
version = "0.1.0"
edition = "2021"
description = "Rust port of xklb's fsadd --fs"
categories = ["command-line-utilities"]
license = "BSD-3-Clause"
repository = "https://github.com/chapmanjacobd/library-rs"
homepage = "https://github.com/chapmanjacobd/library"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
walkdir = "2.5.0"
magic = "0.16.2"
which = "8.0.0"
tokio = { version = "1.47.1", features = ["process", "sync", "macros", "rt-multi-thread", "time"] }
futures = "0.3.31"
crossterm = "0.29.0"
