[package]
name = "library-rs"
version = "0.1.3"
edition = "2021"
description = "Rust port of xklb's fsadd --fs"
categories = ["command-line-utilities"]
license = "BSD-3-Clause"
repository = "https://github.com/chapmanjacobd/library-rs"
homepage = "https://github.com/chapmanjacobd/library"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
walkdir = "2.5.0"
tokio = { version = "1.47.1", features = ["process", "sync", "macros", "rt-multi-thread", "time", "tracing"] }
tracing-indicatif = "0.3.13"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = "0.1.41"
indicatif = "0.18.0"
magic = { version = "0.16.2", optional = true }
tree_magic_mini = { version = "3.2.0", features = ["with-gpl-data"] }

[features]
magic = ["dep:magic"]
